# le-web

./: 1.txt  VERCEL_COLLAB_SECURITY.md
desktop-pet/: index.html  package-lock.json  package.json  tsconfig.json
desktop-pet/src/: main.ts  styles.css
desktop-pet/src-tauri/: Cargo.toml  tauri.conf.json
desktop-pet/src-tauri/capabilities/: default.json
desktop-pet/src-tauri/src/: main.rs
doc/: note.txt  triton_meeting_talk.md
fitness-app/: README.md  index.html
fitness-app/api/: env.js
fitness-app/supabase/: schema.sql
fitness-execution-spa/: index.html
mini-love-web/: .gitignore  README.md  index.html
mini-love-web/api/: env.js
mini-love-web/supabase/: schema.sql
quadrant-todo/: .gitignore  PLAN.md  README.md  app.js  dev-server.js  index.html  package-lock.json  package.json  styles.css
quadrant-todo/api/: env.js
quadrant-todo/api/_lib/: auth.js  config.js  http.js  rate-limit.js  supabase.js
quadrant-todo/api/auth/: login.js  logout.js  me.js  register.js
quadrant-todo/api/goals/: [id].js  index.js
quadrant-todo/supabase/: schema.sql
stock-dashboard/: SUPABASE_SETUP.md  app.js  chart.js  cloud.js  index.html  quotes.js  storage.js  styles.css
timing-lite-tauri/: .gitignore  PROGRESS.md  README.md  index.html  package-lock.json  package.json
timing-lite-tauri/scripts/: build-dmg-silent.sh  seed-dev-db.sh
timing-lite-tauri/src/: App.tsx  styles.css
timing-lite-tauri/src-tauri/: Cargo.toml  tauri.conf.json
timing-lite-tauri/src-tauri/icons/: icon.icns
timing-lite-tauri/src-tauri/src/: main.rs
(+2 files in other folders)
